Trying to fix responisvness on mobile landcape

--- a/hero_1/stylesheets/reset.css
+++ b/hero_1/stylesheets/reset.css
@@ -6,7 +6,7 @@
 
 body{
     min-height: 100dvh;
-    width: 100dvw;
+    max-width: 100dvw;
     overflow-x: hidden;
 }
 
